# Embeded

./: ARM.c  Blink_13.c  CMakeLists.txt  Readme.md  Reset.c  VectorTable.c  VectorTable.h  VectorTableStubs.c  register_def.h
cmake-toolchains/: CMakeCCompiler.cmake.in  CMakeCInformation.cmake  CMakeCXXCompiler.cmake.in  CMakeCXXInformation.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCXXCompiler.cmake  CmakeSystem.cmake.in  LoadLLVMToolchain.cmake  SetLLVMLinker.cmake  link-arm.ld  link.ld  llvm-arm-cortex-m3.cmake
cmake-toolchains/Platform/: None.cmake
examples/: CMakeLists.txt
examples/stm32/: Blink_13.c  CMakeLists.txt
lib/stm32/: CMakeLists.txt
lib/stm32/include/private/stm32/: _VectorTable.h
lib/stm32/include/public/stm32/: stm32_flags.h  stm32_registers.h
lib/stm32/src/: VectorTable.c  VectorTableStubs.c
llvm-toolchains/: SetLLVMLinker.cmake  llvm-arm-cortex-m3.cmake
